===========================

Meshing improvements
--------------------
- Added support for mixed meshes and pyramids in GSLIB-FindPoints.

- Added new SubMesh and ParSubMesh classes that can be used to extract a subset
  of a given Mesh. These classes have the same functionality as Mesh and ParMesh
  and work with all existing MFEM interfaces like finite element spaces etc.

Discretization improvements
---------------------------
- Added support for assembling low-order-refined matrices using a GPU-enabled
  "batched" algorithm. The lor_solvers and plor_solvers now fully support GPU
  acceleration with arbitrary user-supplied coefficients.

- Added support for partial assembly and fully matrix-free operators on mixed
  meshes (different element types and p-adaptivity) through libCEED, including
  device acceleration, e.g. with NVIDIA and AMD GPUs. The p-adaptivity is
  currently limited by MFEM capabilities, i.e. 2D serial meshes. All mixed
  element topologies are supported in serial and parallel: segment, triangle,
  square, tetrahedron, cube, prism, and pyramid.

- Added full assembly and device support for several LinearForm integrators:
  * DomainLF: (f, v)
  * VectorDomainLF: ((f1,...,fn), (v1,...,vn))
  * DomainLFGrad: (f, grad(v))
  * VectorDomainLFGrad: ((f1x,f1y,f1z,...,fnx,fny,fnz), grad(v1,...,vn))

- Added WhiteGaussianNoiseDomainLFIntegrator: a LinearFormIntegrator class for
  spatial Gaussian white noise.

- Added a new Zienkiewicz-Zhu patch recovery-based a posteriori error estimator.
  See fem/estimators.hpp.

- Added a new class FaceQuadratureSpace that allows for the construction of
  QuadratureFunctions on the interior or boundary faces of a mesh.

- Added a class CoefficientVector for efficient access of variable coefficient
  values at quadrature points (in particular for GPU/device kernels).

Linear and nonlinear solvers
----------------------------
- Added a new class DGMassInverse that performs a local elementwise CG