@@ -137,6 +137,7 @@ set(SRCS
   )
 
 set(HDRS
+  assembly.hpp
   bilinearform.hpp
   bilinearform_ext.hpp
   bilininteg.hpp
