@@ -16,6 +16,7 @@
 #include "lininteg.hpp"
 #include "linearform_ext.hpp"
 #include "gridfunc.hpp"
+#include "assembly.hpp"
 
 namespace mfem
 {
@@ -31,6 +32,9 @@ protected:
 
    /** @brief Extension for supporting different assembly levels. */
    LinearFormExtension *ext;
+
+   /// The assembly level of the form (full or legacy)
+   AssemblyLevel assembly;
 
    /** @brief Indicates the LinearFormIntegrator%s stored in #domain_integs,
        #domain_delta_integs, #boundary_integs, and #boundary_face_integs are
@@ -82,7 +86,10 @@ public:
    /// Creates linear form associated with FE space @a *f.
    /** The pointer @a f is not owned by the newly constructed object. */
    LinearForm(FiniteElementSpace *f) : Vector(f->GetVSize())
-   { fes = f; ext = nullptr; extern_lfs = 0; UseDevice(true); }
+   {
+      fes = f; ext = nullptr; extern_lfs = 0; UseDevice(true);
+      assembly = AssemblyLevel::LEGACY;
+   }
 
    /** @brief Create a LinearForm on the FiniteElementSpace @a f, using the
        same integrators as the LinearForm @a lf.
@@ -97,7 +104,11 @@ public:
    /** The associated FiniteElementSpace can be set later using one of the
        methods: Update(FiniteElementSpace *) or
        Update(FiniteElementSpace *, Vector &, int). */
-   LinearForm() { fes = NULL; ext = nullptr; extern_lfs = 0; UseDevice(true); }
+   LinearForm()
+   {
+      fes = NULL; ext = nullptr; extern_lfs = 0; UseDevice(true);
+      assembly = AssemblyLevel::LEGACY;
+   }
 
    /// Construct a LinearForm using previously allocated array @a data.
    /** The LinearForm does not assume ownership of @a data which is assumed to
@@ -105,7 +116,10 @@ public:
        for externally allocated array, the pointer @a data can be NULL. The data
        array can be replaced later using the method SetData(). */
    LinearForm(FiniteElementSpace *f, double *data) : Vector(data, f->GetVSize())
-   { fes = f; ext = nullptr; extern_lfs = 0; }
+   {
+      fes = f; ext = nullptr; extern_lfs = 0;
+      assembly = AssemblyLevel::LEGACY;
+   }
 
    /// Copy assignment. Only the data of the base class Vector is copied.
    /** It is assumed that this object and @a rhs use FiniteElementSpace%s that
@@ -185,10 +199,22 @@ public:
        corresponding pointer (to Array<int>) will be NULL. */
    Array<Array<int>*> *GetFLFI_Marker() { return &boundary_face_integs_marker; }
 
+   /// Set the desired assembly level.
+   /** Valid choices are:
+
+       - AssemblyLevel::LEGACY (default)
+       - AssemblyLevel::FULL
+
+       This method must be called before assembly. */
+   void SetAssemblyLevel(AssemblyLevel assembly_level);
+
+   /// Returns the assembly level
+   AssemblyLevel GetAssemblyLevel() const { return assembly; }
+
    /// Assembles the linear form i.e. sums over all domain/bdr integrators.
-   /// When @a use_device is set to true and the linearform assembly is
+   /// When AssemblyLevel::FULL is set and the linearform assembly is
    /// compatible with device execution, it will be executed on the device.
-   void Assemble(bool use_device = true);
+   void Assemble();
 
    /// Return true if assembly on device is supported, false otherwise.
    bool SupportsDevice();
