@@ -43,18 +43,9 @@ void ParLinearForm::MakeRef(ParFiniteElementSpace *pf, Vector &v, int v_offset)
    pfes = pf;
 }
 
-void ParLinearForm::Assemble(bool use_device)
+void ParLinearForm::Assemble()
 {
-   bool all_supports_device = use_device;
-
-   if (use_device)
-   {
-      bool supports_device = SupportsDevice();
-      MPI_Allreduce(&supports_device, &all_supports_device, 1,
-                    MPI_C_BOOL, MPI_LAND, pfes->GetComm());
-   }
-
-   LinearForm::Assemble(all_supports_device);
+   LinearForm::Assemble();
 
    if (interior_face_integs.Size())
    {
