@@ -326,7 +326,7 @@ public:
             if (opt.amr) { Amr(); }
             if (opt.vis) { Surface::Visualize(opt, S.mesh); }
             if (!opt.id) { mfem::out << "Iteration " << i << ": "; }
-            S.mesh->DeleteGeometricFactors();
+            S.mesh->Update();
             a.Update();
             a.Assemble();
             if (Step() == converged) { break; }
